# machine_learning

./: BITACORA DE DESARROLLO KFOLD.docx  README.md
Implementacion-1-regresion-logistica/: CMakeLists.txt  README.md
Implementacion-1-regresion-logistica/data/: sandbox.py
Implementacion-1-regresion-logistica/data/telcoCustomer/: balance_telco.py  telco_balanced.csv
Implementacion-1-regresion-logistica/data/telcoCustomer/test/: telco_balanced.csv
Implementacion-1-regresion-logistica/data/titanic/: data_completa.csv  join_columns_handle_nulls.py  titanic_final.csv
Implementacion-1-regresion-logistica/data/winequality-red/: winequality-balanced.csv
Implementacion-1-regresion-logistica/examples/: CMakeLists.txt
Implementacion-1-regresion-logistica/examples/cxx/: CMakeLists.txt  LinearRegressionAdamFit.cxx  LinearRegressionGradientDescentFit.cxx
Implementacion-1-regresion-logistica/lib/cxx/PUJ_ML/IO/: CSV.h  CSV.hxx
Implementacion-1-regresion-logistica/lib/cxx/PUJ_ML/Model/: Base.cxx  Base.h
Implementacion-1-regresion-logistica/lib/cxx/PUJ_ML/Model/Regression/: Linear.cxx  Linear.h  Linear.hxx  Logistic.cxx
Implementacion-1-regresion-logistica/lib/cxx/PUJ_ML/Optimizer/: Adam.h  GradientDescent.h
Implementacion-1-regresion-logistica/lib/python3/PUJ_ML/Optimizer/: Base.py  GradientDescent.py
Solucion_Implementacion-1-regresion-logistica/examples/: ConfussionDebugger.py  LinearRegressionClosedFit.py  LogisticRegressionFit.py
Solucion_Implementacion-1-regresion-logistica/lib/PUJ_ML/: Helpers.py
Solucion_Implementacion-1-regresion-logistica/lib/PUJ_ML/Model/: Base.py
Solucion_Implementacion-1-regresion-logistica/lib/PUJ_ML/Model/Regression/: Linear.py  Logistic.py
Solucion_Implementacion-1-regresion-logistica/lib/PUJ_ML/Optimizer/: Adam.py  Base.py  GradientDescent.py
data/heart/: balance_heart.py  heart_balanced.csv
data/telcoCustomer/: telco_balanced.csv
data/titanic/: balance_normalize_titanic.py
examples/cxx/: LinearRegressionClosedFit.cxx  LogisticRegressionAdamFit.cxx  LogisticRegressionGradientDescentFit.cxx  SimpleDebugger.h
examples/python3/: GraphicDebugger.py  LinearRegressionAdamFit.py  LinearRegressionGradientDescentFit.py  LogisticRegressionAdamFit.py  LogisticRegressionFit.py  LogisticRegressionGradientDescentFit.py  SimpleDebugger.py
lib/cxx/: CMakeLists.txt
lib/cxx/PUJ_ML/: Config.h
lib/cxx/PUJ_ML/Model/: Base.hxx
lib/cxx/PUJ_ML/Model/Regression/: Logistic.h  Logistic.hxx
lib/cxx/PUJ_ML/Optimizer/: Base.h
lib/python3/PUJ_ML/: Helpers.py  __init__.py
lib/python3/PUJ_ML/Model/: Base.py  __init__.py
lib/python3/PUJ_ML/Model/Regression/: Linear.py  Logistic.py
lib/python3/PUJ_ML/Optimizer/: Adam.py
